--- a/index.html
+++ b/index.html
@@ -9,18 +9,9 @@
         <script src="js/bootstrap.bundle.js"></script>
         <title>Redesign</title>
     </head>
-    <body>
-        <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label">Email
-                address</label>
-            <input type="email" class="form-control"
-                id="exampleFormControlInput1" placeholder="name@example.com">
-        </div>
-        <div class="mb-3">
-            <label for="exampleFormControlTextarea1" class="form-label">Example
-                textarea</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1"
-                rows="3"></textarea>
+    <body class="background">
+        <div class="container" >
+            <h3 class="text-center mt-4">AI Demographic</h3>
         </div>
     </body>
 </html>
