--- a/index.html
+++ b/index.html
@@ -14,20 +14,9 @@
             <h3 class="text-center mt-4 text-white ">AI Demographic</h3>
             <div class="row mt-5">
                 <div class="col-12">
-                    <div class="card text-center">
-                        <div class="card-header">
-                          Featured
-                        </div>
-                        <div class="card-body color-card">
-                            <img src="https://cdn.discordapp.com/attachments/876025140490698753/1083339336268910592/image-upload-icon-260nw-1062480539.png" class="card-img-top w-25 " alt="...">
-                          <h2 class="card-text">Drop your image here!!</h2>
-                          
-                        </div>
-                        <div class="card-footer text-muted">
-                            <a href="#" class="btn btn-primary">Upload</a>
-                          
-                        </div>
-                      </div>
+                    <div class="icon">
+                        <i class="fas fa-images"></i>
+                    </div>
                 </div>
             </div>
         </div>
