--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 
-        <script src="js/bootstrap.bundle.js"></script>
+        <script src="js/bootstrap.bundle.js">
+            
+        </script>
         <title>Redesign</title>
     </head>
     <body class="background">
@@ -14,7 +17,9 @@
             <h3 class="text-center mt-4 text-white ">AI Demographic</h3>
             <div class="row mt-5">
                 <div class="col-12">
-                    <i class="fa-sharp fa-solid fa-image  text-white"></i>
+                    <div class="text-white">
+                    <i class="bi bi-file-image w-25"></i>
+                </div>
                 </div>
             </div>
         </div>
