--- a/index.html
+++ b/index.html
@@ -5,21 +5,30 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-
+        <link rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
         <script src="js/bootstrap.bundle.js">
             
         </script>
         <title>Redesign</title>
     </head>
     <body class="background">
-        <div class="container" >
+        <div class="container">
             <h3 class="text-center mt-4 text-white ">AI Demographic</h3>
             <div class="row mt-5">
-                <div class="col-12">
-                    <div class="text-white">
-                    <i class="bi bi-file-image w-25"></i>
-                </div>
+                <div class="col-12 d-flex justify-content-center">
+                    <div class="box">
+                        <div class="drag-area">
+                            <div class="text-white " style="font-size: 10rem;">
+                                <i class="bi bi-file-image "></i>
+                            </div>
+                            <h3>Drop your image here!!</h3>
+                            <h5 class="text-primary">browse file</h5>
+                        </div>
+                        <div class="text-center mt-3">
+                        <a href="#" class="btn btn-primary ">Upload</a>
+                    </div>
+                    </div>
                 </div>
             </div>
         </div>
