--- a/index.html
+++ b/index.html
@@ -22,15 +22,38 @@
                             <div class="text-white " style="font-size: 10rem;">
                                 <i class="bi bi-file-image "></i>
                             </div>
-                            <h3>Drop your image here!!</h3>
-                            <h5 class="text-primary">browse file</h5>
+                            <h3>Drop your image here</h3>
+                            <h5 class="text-primary header">browse file</h5>
                         </div>
                         <div class="text-center mt-3">
-                        <a href="#" class="btn btn-primary ">Upload</a>
-                    </div>
+                            <a href="#" class="btn btn-primary ">Upload</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </body>
+    <script>
+        const dragArea = document.querySelector('.drag-area');
+  const dragText = document.querySelector('header');
+
+  //when file is inside the drag area
+  dragArea.addEventListener('dragover', (event)=>{
+    event.preventDefault();
+    dragText.textContent = 'Release to Upload';
+    dragArea.classList.add('active');
+  });
+
+  //when file leaves the drah area
+  dragArea.addEventListener('dragleave', ()=>{
+    dragText.textContent = 'Drop your image here';
+    dragArea.classList.remove('active');
+
+  });
+
+  //when the file is dropped in the drag area
+  dragArea.addEventListener('drop', (event)=>{
+    event.preventDefault();
+  });
+    </script>
 </html>
