--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-        <script src="js/bootstrap.bundle.js">
-            
-        </script>
+        <script src="js/bootstrap.bundle.js"></script>
+        <!-- <script src="js/script.js"></script> -->
         <title>Redesign</title>
     </head>
     <body class="background">
@@ -18,42 +17,44 @@
             <div class="row mt-5">
                 <div class="col-12 d-flex justify-content-center">
                     <div class="box">
-                        <div class="drag-area">
-                            <div class="text-white " style="font-size: 10rem;">
+                        <form action="#" method="POST"
+                            encrype="multipart/form-data">
+                            <div class="mb-3">
+                                <label for="image" class="form-label text-white">Upload Image</label>
+                                <input type="file" accept="image/*"
+                                    id="imgInput" name="post_image"
+                                    class="form-control">
+
+                            </div>
+
+                            <div class="drag-area">
+                                <img id="previewImg" class="img-fluid rounded">
+                                <!-- <div class="text-white " style="font-size: 10rem;">
                                 <i class="bi bi-file-image "></i>
                             </div>
                             <h3>Drop your image here</h3>
-                            <h5 class="text-primary header">browse file</h5>
-                        </div>
+                            <h5 class="text-primary header">browse file</h5> -->
+                            </div>
+                        </form>
                         <div class="text-center mt-3">
-                            <a href="#" class="btn btn-primary ">Upload</a>
+                            <a href="#" class="btn btn-primary ">Send</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </body>
+
     <script>
-        const dragArea = document.querySelector('.drag-area');
-  const dragText = document.querySelector('header');
+        let imgInput = document.querySelector("#imgInput");
+        let previewImg = document.querySelector("#previewImg");
 
-  //when file is inside the drag area
-  dragArea.addEventListener('dragover', (event)=>{
-    event.preventDefault();
-    dragText.textContent = 'Release to Upload';
-    dragArea.classList.add('active');
-  });
-
-  //when file leaves the drah area
-  dragArea.addEventListener('dragleave', ()=>{
-    dragText.textContent = 'Drop your image here';
-    dragArea.classList.remove('active');
-
-  });
-
-  //when the file is dropped in the drag area
-  dragArea.addEventListener('drop', (event)=>{
-    event.preventDefault();
-  });
+        //รับevent มา และreturn
+        imgInput.onchange = evt => {
+            const [file] = imgInput.files; //เข้าถึงfileที่เลือก และเอามาเก็บไว้ในตัวแปร
+            if(file) {
+                previewImg.src = URL.createObjectURL(file); //การส่งรูปภาพที่เรามีการเก็บมา ไปใส่ที่preveiwImg
+            }
+        }
     </script>
 </html>
