--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
         <link rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
         <script src="js/bootstrap.bundle.js"></script>
-        <!-- <script src="js/script.js"></script> -->
         <title>Redesign</title>
     </head>
     <body class="background">
         <div class="container">
-            <h3 class="text-center mt-4 text-white ">AI Demographic</h3>
+            <h3 class="text-center mt-5 text-white ">AI Demographic</h3>
             <div class="row mt-5">
                 <div class="col-12 d-flex justify-content-center">
                     <div class="box">
@@ -37,7 +36,7 @@
                             </div>
                         </form>
                         <div class="text-center mt-3">
-                            <a href="#" class="btn btn-primary ">Send</a>
+                            <a href="display.html" class="btn btn-primary ">Send</a>
                         </div>
                     </div>
                 </div>
