--- a/display.html
+++ b/display.html
@@ -31,7 +31,7 @@
                                     border: 2px solid rgb(0, 197, 197);
                                     width: 52.5px;
                                     height: 64.6875px;
-                                    left: 825.938px;
+                                    left: 820.938px;
                                     top: 330px;
                                     ">
                                     <div class="Demographic_label">
@@ -47,7 +47,7 @@
                                     border: 2px solid rgb(0, 197, 197);
                                     width: 50.625px;
                                     height: 68.4375px;
-                                    left: 645px;
+                                    left: 640px;
                                     top: 330px;
                                     ">
                                     <div class="Demographic_label">
@@ -63,7 +63,7 @@
                                     border: 2px solid rgb(0, 197, 197);
                                     width: 47.8125px;
                                     height: 62.8125px;
-                                    left: 970px;
+                                    left: 965px;
                                     top: 350px;
                                     ">
                                     <div class="Demographic_label">
@@ -79,7 +79,7 @@
                                     border: 2px solid rgb(0, 197, 197);
                                     width: 51.5625px;
                                     height: 69.375px;
-                                    left: 740px;
+                                    left: 735px;
                                     top: 300px;
                                     ">
                                     <div class="Demographic_label">
@@ -95,7 +95,7 @@
                                     border: 2px solid rgb(0, 197, 197);
                                     width: 59.0625px;
                                     height: 75.9375px;
-                                    left: 1160.625px;
+                                    left: 1155.625px;
                                     top: 290px;
                                     ">
                                     <div class="Demographic_label">
@@ -111,7 +111,7 @@
                                     border: 2px solid rgb(0, 197, 197);
                                     width: 55.3125px;
                                     height: 70.3125px;
-                                    left: 1113px;
+                                    left: 1108px;
                                     top: 357px;
                                     ">
                                     <div class="Demographic_label">
@@ -127,7 +127,7 @@
                                     border: 2px solid rgb(0, 197, 197);
                                     width: 48.75px;
                                     height: 63.75px;
-                                    left: 1032px;
+                                    left: 1027px;
                                     top: 310px;
                                     ">
                                     <div class="Demographic_label">
@@ -143,7 +143,7 @@
                                     border: 2px solid rgb(0, 197, 197);
                                     width: 60px;
                                     height: 82.5px;
-                                    left:580px;
+                                    left:575px;
                                     top: 210px;
                                     ">
                                     <div class="Demographic_label">
@@ -159,7 +159,7 @@
                                     border: 2px solid rgb(0, 197, 197);
                                     width: 50.625px;
                                     height: 60.9375px;
-                                    left: 960px;
+                                    left: 955px;
                                     top: 240px;
                                     ">
                                     <div class="Demographic_label">
@@ -175,7 +175,7 @@
                                     border: 2px solid rgb(0, 197, 197);
                                     width: 44.0625px;
                                     height: 56.25px;
-                                    left: 690px;
+                                    left: 685px;
                                     top: 264px;
                                     ">
                                     <div class="Demographic_label">
@@ -191,7 +191,7 @@
                                     border: 2px solid rgb(0, 197, 197);
                                     width: 47.8125px;
                                     height: 68.4375px;
-                                    left: 1090px;
+                                    left: 1085px;
                                     top: 250.8125px;
                                     ">
                                     <div class="Demographic_label">
@@ -207,7 +207,7 @@
                                     border: 2px solid rgb(0, 197, 197);
                                     width: 51.5625px;
                                     height: 65.625px;
-                                    left: 530.812px;
+                                    left: 525.812px;
                                     top: 316px;
                                     ">
                                     <div class="Demographic_label">
@@ -223,11 +223,12 @@
                                     border: 2px solid rgb(0, 197, 197);
                                     width: 58.125px;
                                     height: 78.75px;
-                                    left: 830px;
+                                    left: 825px;
                                     top: 235px;
                                     ">
                                     <div class="Demographic_label">
-                                        <span class="Demographic_gender">Male (
+                                        <span class="Demographic_gender">
+                                            Male (
                                             White )</span><span
                                             class="Demographic_age">Age : 53</span>
                                     </div>
@@ -236,6 +237,8 @@
                         </div>
                     </div>
                 </div>
+                <div class="gap"></div>
+
                 <h3 class="text-center mt-5 text-white">JSON Result</h3>
                 <div class="row">
                     <div class="col-12 d-flex justify-content-center">
@@ -248,12 +251,13 @@
                 </div>
                 <div class="row mb-5">
                     <div class="col-12 d-flex justify-content-center">
-                        <div class="textbox">
+                        <div class="textbox ">
                             <pre id="myText"></pre>
 
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
     </body>
