--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;900&family=Noto+Serif&display=swap"
+            rel="stylesheet">
         <script src="js/bootstrap.bundle.js"></script>
         <title>Redesign</title>
     </head>
     <body class="background">
         <div class="container">
-            <h3 class="text-center mt-5 text-white ">AI Demographic</h3>
+            <h2 class="text-center mt-5 text-white ">AI Demographic</h2>
             <div class="row mt-5">
                 <div class="col-12 d-flex justify-content-center">
                     <div class="box">
@@ -36,7 +41,7 @@
                             </div>
                         </form>
                         <div class="text-center mt-3">
-                            <a href="display.html" class="btn btn-primary ">Send</a>
+                            <a href="display.html" class="btn btn-primary text-md">Send <span><i class="bi bi-arrow-right-circle"></i></span></a>
                         </div>
                     </div>
                 </div>
