--- a/display.html
+++ b/display.html
@@ -19,7 +19,7 @@
 
     <body class="background">
         <div class="container">
-            <h2 class="text-center mt-5 text-white">Demographic result</h2>
+            <h2 class="text-center mt-5 text-white">Demographic Result</h2>
             <div class="Result__image_demographic">
                 <div class="row mt-5">
                     <div class="col-12 d-flex justify-content-center">
@@ -243,7 +243,7 @@
                 </div>
                 <div class="gap"></div>
 
-                <h3 class="text-center mt-5 text-white">JSON Result</h3>
+                <h3 class="text-center mt-5 mb-2 text-white">JSON Result</h3>
                 <div class="row">
                     <div class="col-12 d-flex justify-content-center">
                         <div class="headtext ">
