--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                             </div>
                         </form>
                         <div class="text-center mt-3">
-                            <a href="display.html" class="btn btn-primary text-md">Send <span><i class="bi bi-arrow-right-circle"></i></span></a>
+                            <a href="display.html" class="btn btn-primary fs-5">Send 
+                                <span><i class="bi bi-arrow-right-circle"></i></span></a>
                         </div>
                     </div>
                 </div>
