--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-            <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link
             href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;900&family=Noto+Serif&display=swap"
@@ -24,24 +24,18 @@
                         <form action="#" method="POST"
                             encrype="multipart/form-data">
                             <div class="mb-3">
-                                <label for="image" class="form-label text-white">Upload Image</label>
+                                <label for="image" class="form-label
+                                    text-white">Upload Image</label>
                                 <input type="file" accept="image/*"
                                     id="imgInput" name="post_image"
                                     class="form-control">
-
                             </div>
-
                             <div class="drag-area">
                                 <img id="previewImg" class="img-fluid rounded">
-                                <!-- <div class="text-white " style="font-size: 10rem;">
-                                <i class="bi bi-file-image "></i>
-                            </div>
-                            <h3>Drop your image here</h3>
-                            <h5 class="text-primary header">browse file</h5> -->
                             </div>
                         </form>
                         <div class="text-center mt-3">
-                            <a href="display.html" class="btn btn-primary fs-5">Send 
+                            <a href="display.html" class="btn btn-primary fs-5">Send
                                 <span><i class="bi bi-arrow-right-circle"></i></span></a>
                         </div>
                     </div>
