--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <body class="background">
         <div class="container">
             <h2 class="text-center mt-5 text-white ">AI Demographic</h2>
-            <div class="row mt-5">
+            <div class="row mt-4 mb-5">
                 <div class="col-12 d-flex justify-content-center">
-                    <div class="box">
+                    <div class="box h-100">
                         <form action="#" method="POST"
                             encrype="multipart/form-data">
                             <div class="mb-3">
