--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             </div>
                         </form>
                         <div class="text-center mt-3">
-                            <a href="display.html" class="btn btn-primary fs-5">Send
+                            <a href="display.html" class="btn btn-info fs-5">Send
                                 <span><i class="bi bi-arrow-right-circle"></i></span></a>
                         </div>
                     </div>
